argocd/docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: bookstack
  labels:
    app: bookstack
spec:
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: bookstack
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
      - name: bookstack
        image: linuxserver/bookstack:version-v24.12.1
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/config"
          name: bookstack-temp
        - mountPath: "/config/www/images"
          name: images
        - mountPath: "/config/www/files"
          name: files
        - mountPath: "/config/www/uploads"
          name: attachments
        #readinessProbe:
        # httpGet:
        #   path: /status
        #   port: 80
        # initialDelaySeconds: 5
        # timeoutSeconds: 1
        # periodSeconds: 15
        # livenessProbe:
        #  httpGet:
        #    path: /login
        #    port: 80
        #  initialDelaySeconds: 15
        #  timeoutSeconds: 1
        #  periodSeconds: 15
      volumes:
        - name: bookstack-temp
          emptyDir:
            sizeLimit: 500Mi
        - name: images
          persistentVolumeClaim:
            claimName: uploads-nfs-pvc
        - name: files
          persistentVolumeClaim:
            claimName: fileuploads-nfs-pvc
        - name: attachments
          persistentVolumeClaim:
            claimName: attachments-nfs-pvc
